# Rust-OS

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  changelog.md
.cargo/: config.toml
doc/: roadmap.md
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
src/arch/amd64/: boot.asm  grub.cfg  linker.ld  long_mode_start.asm  multiboot_header.asm
src/initrd/: initrd.tar  mod.rs
src/initrd/incl/: lorem_ipsum.txt  test
src/interrupts/: idt.rs  mod.rs  pic8259.rs
src/interrupts/serialkbd/: LICENSE-MIT  mod.rs  scancodes.rs
src/interrupts/serialkbd/layouts/: azerty.rs  dvorak104.rs  jis109.rs  uk105.rs  us104.rs
src/memory/: allocator.rs  mod.rs  offset_page_table.rs
src/segmentation/: gdt.rs  mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs
src/task/shell/: fs.rs  mod.rs  util.rs
tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs
