[package]
name = "rust-os"
version = "0.1.0"
authors = ["Nicolas Suarez <monty@kernelstack.net>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "^0.35.0"
spin = "^0.7.1"

[dependencies.lazy_static]
version = "^1.4.0"
features = ["spin_no_std"]