[package]
name = "rust-os"
version = "0.1.0"
authors = ["Nicolas 'Montessquio' Suarez"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = {version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.5"
uart_16550 = "0.2.0"
bit_field = "0.10.1"
bitflags = "1.0.4"
linked_list_allocator = "0.9.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.17"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.slab]
version = "0.4.4"
default-features = false

#[dependencies.futures]
#version = "0.3.17"
#default-features = false
#features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

